# Esprite

./: .gitattributes  .gitignore  README.md  arena.html  build_dataset.py  dashboard.html  dpo_campaign.py  dpo_train.py  loop.py  pyproject.toml  render_samples.py  sheet_labeler.html
src/arena/: campaign.py  ranking.py  server.py
src/dataset/: downsample.py  palette.py  pipeline.py  sheet_labeler.py  sheet_segment.py  sources.py  splits.py  storage.py  tsr_ingest.py  types.py
src/encoder/: data.py  loss.py  model.py  train.py
src/genmodel/: attributes.py  data.py  dpo.py  eval_metrics.py  graph_sampler.py  loss.py  model.py  sample.py  tokenize.py  train.py  vocab.py
src/monitor/: control.py  gpu.py  heartbeat.py  server.py
tools/: audit_visual.py  bench_forward.py  bench_gen_18k.py  bench_graph.py  bench_graph_18k.py  bench_pool.py  bench_sample.py  consolidate_training.py  dataset_stats.py  eval_seqend.py  gpu_warmup.py  profile_kernels.py  profile_kernels_v2.py  visualize_features.py
